--- a/Robot-Dog/frontend/web_example/app/src/main/AndroidManifest.xml
+++ b/Robot-Dog/frontend/web_example/app/src/main/AndroidManifest.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.http_example">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Http_example">
+        android:theme="@style/Theme.Http_example"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".NewActivity"
+            android:exported="true"
+            android:label="@string/title_activity_new" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
