--- a/Robot-Dog/frontend/web_example/app/src/main/AndroidManifest.xml
+++ b/Robot-Dog/frontend/web_example/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
